added section logo and background

--- a/src/index.jade
+++ b/src/index.jade
@@ -22,6 +22,8 @@ html
         h1.dd-homepage-title Talk title
 
       section.dd-section
+        div.dd-section-background
+        div.dd-section-logo
         h2.dd-title Section title
 
       section.dd-speaker
