added style for twitter logo and section background

--- a/src/styles/drupaldays.styl
+++ b/src/styles/drupaldays.styl
@@ -9,7 +9,7 @@
 .dd-homepage-logo
   position: absolute
   right: 0px
-  top: -1px
+  top: -3px
   width: 166px
   height: 262px
 
@@ -41,6 +41,29 @@
 
 .dd-section
   background-color: #FFF
+
+.dd-section-background
+  background-image: url("../images/section/background.png")
+  background-repeat: no-repeat
+  background-size: 600px 400px
+  position: absolute
+  height: 400px
+  width: 400px
+  bottom: 0px
+  left: 0px
+  opacity: 0.4
+  background-position: -200px 123px
+
+.dd-section-logo
+  background-image: url("../images/section/twitter.png")
+  background-repeat: no-repeat
+  background-size: 200px 200px
+  position: absolute
+  height: 200px
+  width: 200px
+  top: 0px
+  right: 0px
+  background-position: 70px -27px
 
 .dd-speaker
   background-image: url('../images/background.png')
