changed viewport size and imported github webfonts

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -3,7 +3,7 @@
 
 // variables!
 
-slide_width = 640px
+slide_width = 840px
 slide_height = 480px
 slide_background = #ededed
 
@@ -158,6 +158,7 @@ pre
 
 // Import of drupaldays stylesheets
 @import 'drupaldays'
+@import 'octicons'
 
 // content styles
 
