--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
     head
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-        title AngularJS - Javascript framework for superheroes
+        title Talk title
 
         // build:css styles/styles.css
         //- Check out 'src/bower_components/prism/themes/' for available themes
